# cmake-vcpkg-demo

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  docker-compose.yml  vcpkg-configuration.json  vcpkg.json
cmake/: PackagingInit.cmake  PackagingSetupDependencies.cmake  VcpkgConfig.cmake
cmake/Packaging/: analyze_apt_deps_set_cpack.py  common.py  config.json  copy_all_deps_to_install.py  custom_install.cmake.in
src/: CMakeLists.txt
src/boost-filesystem-demo/: CMakeLists.txt  main.cpp
src/fmt-demo/: CMakeLists.txt
src/hello-world/: CMakeLists.txt
src/pcl-demo/: CMakeLists.txt  main.cpp
